--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -103,8 +103,8 @@ body:
     id: packages
     attributes:
       label: WebSpatial & Vite versions
-      description: Paste the output of the following terminal command.
-      placeholder: |
+      description: |
+        Paste the output of the following terminal command:
         cd your-project-folder/
         npm ls @webspatial/react-sdk @webspatial/core-sdk @webspatial/vite-plugin @webspatial/builder @webspatial/platform-visionos vite vite-plugin-html react react-dom
     validations:
