--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,4 +1,4 @@
-name: ""
+name: "Bug Report"
 description: File a reproducible bug encountered while building with WebSpatial
 labels: ["bug", "feature"]
 assignees: []
