--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -48,16 +48,6 @@ body:
     validations:
       required: true
 
-  - type: dropdown
-    id: severity
-    attributes:
-      label: Severity
-      options:
-        - "S0 - Blocking (cannot proceed / demo-blocker)"
-        - "S1 - Major (workaround exists but risky)"
-        - "S2 - Minor (no data loss)"
-        - "S3 - Documentation"
-
   - type: textarea
     id: environment
     attributes:
@@ -66,6 +56,7 @@ body:
         **Add your OS details.** Example: macOS 14.6.1 (Apple Silicon or Intel)
 
         **Paste the output of the following terminal commands**
+
         **Node.js version**
         ```bash
         node -v
@@ -77,5 +68,10 @@ body:
         npm ls @webspatial/react-sdk @webspatial/core-sdk @webspatial/vite-plugin \
         @webspatial/builder @webspatial/platform-visionos vite vite-plugin-html react react-dom
         ```
+      value: |
+        • Device / Run Target (Vision Pro / Simulator / Browser):
+        • OS:
+        • Node.js version:
+        • WebSpatial & Vite versions:
     validations:
       required: true
