--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -27,8 +27,8 @@ body:
   - type: textarea
     id: actual
     attributes:
-      label: Expected vs Actual Behavior
-      description: Describe expected and actual behaviour. Attaching screenshots and console logs is highly recommended for faster resolution.
+      label: Steps & Expected vs Actual Behavior
+      description: Describe how to reproduce the bug, what output you expected, and what actually happened. Screenshots, console logs, and errors help speed up resolution!
     validations:
       required: true
 
@@ -37,9 +37,7 @@ body:
     attributes:
       label: Dev Environment
       description: |
-        **Add your device and OS details.** Example: macOS 14.6.1 (Apple Silicon or Intel)
-
-        **Paste the output of the following terminal commands**
+        **Commands to find versions:**
 
         **Node.js version**
         ```bash
