--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -14,8 +14,18 @@ body:
   - type: textarea
     id: actual
     attributes:
-      label: Steps & Expected vs Actual Behavior
-      description: Describe how to reproduce the bug, what output you expected, and what actually happened. Screenshots, console logs, and errors help speed up resolution!
+      label: Steps to reproduce
+      description: |
+        **Describe how to reproduce the bug.**
+    validations:
+      required: true
+
+  - type: textarea
+    id: actual
+    attributes:
+      label: Expected vs Actual Behavior
+      description: |
+        **Describe what output you expected and what actually happened. Screenshots and console logs help speed up resolution!**
     validations:
       required: true
 
