--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -12,20 +12,18 @@ body:
         - label: "I searched existing issues and discussions"
 
   - type: textarea
-    id: actual
+    id: steps
     attributes:
       label: Steps to reproduce
-      description: |
-        **Describe how to reproduce the bug.**
+      description: **Describe how to reproduce the bug.**
     validations:
       required: true
 
   - type: textarea
-    id: actual
+    id: behavior
     attributes:
       label: Expected vs Actual Behavior
-      description: |
-        **Describe what output you expected and what actually happened. Screenshots and console logs help speed up resolution!**
+      description: **Describe what output you expected and what actually happened. Screenshots and console logs help speed up resolution!**
     validations:
       required: true
 
