--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,4 +1,4 @@
-name: "Bug Report"
+name: "WebSpatial participant bugs"
 description: Bug template to be used by WebSpatial program participants
 labels: ["bug", "feature"]
 assignees: []
